--- a/muddery/web/package.json
+++ b/muddery/web/package.json
@@ -13,6 +13,7 @@
     "css-loader": "^0.28.11",
     "extract-text-webpack-plugin": "^4.0.0-beta.0",
     "file-loader": "^1.1.11",
+    "html-loader": "^0.5.5",
     "html-webpack-plugin": "^3.2.0",
     "style-loader": "^0.20.3",
     "url-loader": "^1.0.1",
